<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context="fr.wcs.wcstravel.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_flight"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_background"
        android:layout_margin="15dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/departure_airport"
                android:textSize="18sp"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/spinnerDepartureFlight"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/destination_airport"
                android:textSize="18sp"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/spinnerDestinationFlight"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/departure_date"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewDepartureDate"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="18sp"
                android:gravity="center"
                android:hint="@string/chose_departure_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/return_date"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewReturnDate"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/chose_return_date"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonFindFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/find"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"/>

</LinearLayout>
